nginx-hello-world/nginx-hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2023-10-14T23:02:11Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  name: nginx-hello-world-service
  namespace: default
  resourceVersion: "7125"
  uid: 34f741da-f673-4c2a-877d-ed065a46802d
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.43.194.106
  clusterIPs:
  - 10.43.194.106
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30746
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-world
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.0.240
    - ip: 192.168.0.241
    - ip: 192.168.0.242
    - ip: 192.168.0.243
