nginx-hello-world/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-world-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  nginx-hello-world-app
